--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	
 </head>
-  <body>
+<body>
     <div class="wrapper">
     <header>
     <div class="topnav" id="myTopnav">
@@ -78,11 +78,29 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 <h2 id="recent-updates">Recent Updates</h2>
 <hr />
 <ul>
-  <li>Paper accepted in IEEE Globecom 2019.</li>
-  <li>Paper accepted in IET Communications.</li>
+  <li>Paper accepted in IEEE Globecom 2019</li>
+  <li>Paper accepted in IET Communications</li>
 </ul>
 
+
+<h2 id="academic-profiles">Academic Profiles</h2>
+<hr />
+<ul>
+  <li><a href="https://scholar.google.com.tw/citations?hl=de&user=P51I-OsAAAAJ" target="_blank">Google Scholar</a> </li>
+  <li><a href="https://dblp.org/pers/hd/a/Abanto=Leon:Luis_F=" target="_blank">DBLP</a></li>
+  <li><a href="https://www.researchgate.net/profile/Luis_F_Abanto-Leon" target="_blank">ResearchGate</a></li>
+  <li><a href="https://www.semanticscholar.org/author/Luis-F.-Abanto-Leon/26978441" target="_blank">Semantic Scholar</a></li>
+  <li><a href="https://orcid.org/0000-0002-3533-7928" target="_blank">ORCID</a></li>
+  <li><a href="https://academic.microsoft.com/search?q=Luis+F.+Abanto-Leon" target="_blank">Academic Microsoft</a></li>
+</ul>
+
+
 </section>
+
+</div>
 <footer>
+<p>TU Darmstadt [Dunky]</a></p>
 </footer>
+
+</body>
 </html>
