--- a/publications.html
+++ b/publications.html
@@ -243,7 +243,7 @@
     <p>
 	<div class="bibentry-inproceedings">
 	<div class="bibtitle">
-    <strong>Graph-based resource allocation with conflict avoidance for V2V broadcast communications.</strong>
+    <strong>Graph-based Resource Allocation with Conflict Avoidance for V2V Broadcast Communications.</strong>
 		<a href="https://doi.org/10.1109/PIMRC.2017.8292606" target="_blank">(DOI)</a>
      
 	<div class="bibauthors">
