--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en-US">
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="releases/v5-6-3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <meta charset="utf-8">
@@ -11,11 +12,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Personal webpage of Luis F. Abanto-Leon." />
 <meta property="og:description" content="Personal webpage of Luis F. Abanto-Leon." />
-<link rel="canonical" href="https://l-f-abanto-leon.github.io/" />
-<meta property="og:url" content="https://l-f-abanto-leon.github.io/" />
+<link rel="canonical" href="https://luis-f-abanto-leon.github.io/" />
+<meta property="og:url" content="https://luis-f-abanto-leon.github.io/" />
 <meta property="og:site_name" content="Luis F. Abanto-Leon" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"Luis F. Abanto-Leon","url":"https://l-f-abanto-leon.github.io/","name":"Luis F. Abanto-Leon","description":"Personal webpage of Luis F. Abanto-Leon.","@context":"http://schema.org"}</script>
+{"@type":"WebSite","headline":"Luis F. Abanto-Leon","url":"https://luis-f-abanto-leon.github.io/","name":"Luis F. Abanto-Leon","description":"Personal webpage of Luis F. Abanto-Leon.","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
     <link rel="stylesheet" href="css/style.css">
     <script src="js/scale.fix.js"></script>
