--- a/research-interests.html
+++ b/research-interests.html
@@ -11,11 +11,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Personal webpage of Luis F. Abanto-Leon." />
 <meta property="og:description" content="Personal webpage of Luis F. Abanto-Leon." />
-<link rel="canonical" href="https://l-f-abanto-leon.github.io/research-interests.html" />
-<meta property="og:url" content="https://l-f-abanto-leon.github.io/research-interests.html" />
+<link rel="canonical" href="https://luis-f-abanto-leon.github.io/research-interests.html" />
+<meta property="og:url" content="https://luis-f-abanto-leon.github.io/research-interests.html" />
 <meta property="og:site_name" content="Luis F. Abanto-Leon" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"A post on Tactile Internet","url":"https://l-f-abanto-leon.github.io/research-interests.html","description":"Personal webpage of Luis F. Abanto-Leon.","@context":"http://schema.org"}</script>
+{"@type":"WebPage","headline":"A post on Tactile Internet","url":"https://luis-f-abanto-leon.github.io/research-interests.html","description":"Personal webpage of Luis F. Abanto-Leon.","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
     <link rel="stylesheet" href="css/style.css">
     <script src="js/scale.fix.js"></script>
