--- a/academic-service.html
+++ b/academic-service.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.6">
-    <link rel="stylesheet" href="releases/v5-6-3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Begin Jekyll SEO tag v2.5.0 -->
@@ -22,14 +22,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.6, user-scalable=no">
 
 </head>
-  <body>
+<body>
     <div class="wrapper">
     <header>
     <div class="topnav" id="myTopnav">
               <!-- <a href="index.html">Home</a> -->
               <a class="" href="index.html">Home</a>
               <!-- <a href="research-interests.html">Research Interest</a> -->
-              <a class="" href="research-interests.html">Research Interests</a>
+              <!-- <a class="" href="research-interests.html">Research Interests</a> -->
               <!-- <a href="publications.html">Publications</a> -->
               <a class="" href="publications.html">Publications</a>
               <!-- <a href="academic-service.html">Academic Service</a> -->
@@ -49,37 +49,42 @@
       }
       </script>
       </header>
-      <section>
-	  
 
-<h3 id="technical-program-committee-tpc">Technical Program Committee (TPC)</h3>
+<section>
+	  
+<h3 id="tpc-chair">Technical Program Committee Chair</h3>
 <!--- <div class="buttonstyle"><a href="#">Button</a></div> Advances in Industrial Networks and Intelligent Systems in 2nd International Conference on Communication, Management and Information Technology ICCMIT 2016, Italy, April, 2016-->
 <ul>
-  <li><a class="hy" href="http://icscc.online">IEEE IoTaIS 2019,</a> Bali, Indonesia</li>
-  <li><a class="hy" href="http://icscc.online">ICSCC 2019,</a> Sarawak, Malaysia</li>
-  <li><a class="hy" href="https://www.sigapp.org/sac/sac2018/">ACM SAC 2018,</a> Pau, France</li>
-  <li><a class="hy" href="http://pimrc2017.ieee-pimrc.org">IEEE PIMRC 2017,</a> Montreal, QC, Canada</li>
-  <li><a class="hy" href="#">ICIIT 2017 </a></li>
-  <li><a class="hy" href="#">NCCA 2017 </a></li>
-  <li><a class="hy" href="#">IEEE VTC-Fall 2017 </a></li>
+  <li><a href="http://www.ieeevtc.org/vtc2018fall/" target="_blank">VTC 2018 - Fall,</a> Chicago, USA</li>
 </ul>
 
 
 <h3 id="reviewer">Reviewer</h3>
+
+<h4 id="reviewer">Journals</h3>
 <ul>
-  <li>IEEE Transactions on Communications</li>
-  <li>IEEE Communications Magazine</li>
-  <li>IEEE Wireless Communications</li>
-  <li>IEEE Transactions on Industrial Informatics</li>
-  <li>EURASIP Journal on Wireless Communications and Networking</li>
-  <li>IET Communications</li>
-  <li>ELSEVIER Ad Hoc Networks</li>
-  <li>ACM/Springer Mobile Networks and Applications</li>
+  <li>IEEE Transactions on Mobile Computing</li>
+  <li>IEEE Transactions on Big Data</li>
+  <li>IEEE Transactions on Cognitive Communications and Networking</li>
+  <li>IEEE Access</li>
+  <li>Elsevier Vehicular Communications</li>
+  <li>EURASIP Journal of Speech Communication</li>
 </ul>
 
 
+<h4 id="reviewer">Conferences</h3>
+<ul>
+  <li><a href="https://globecom2019.ieee-globecom.org/" target="_blank">IEEE GLOBECOM 2019,</a> Waikoloa, USA</li>
+  <li><a href="http://www.ieeevtc.org/vtc2018fall/" target="_blank">VTC-2018 - Fall,</a> Chicago, USA</li>
+  <li><a href="http://www.ieeevtc.org/vtc2018spring/" target="_blank">VTC-2018 - Spring,</a> Porto, Portugal</li>
+</ul>
+
 </section>
+
+</div>
 <footer>
+<p>TU Darmstadt [Dunky]</a></p>
 </footer>
+
 </body>
 </html>
