--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <!-- <a href="publications.html">Publications</a> -->
               <a class="" href="publications.html">Publications</a>
               <!-- <a href="academic-service.html">Academic Service</a> -->
-              <!-- <a class="" href="academic-service.html">Academic Service</a> -->
+              <a class="" href="academic-service.html">Academic Service</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
       <div style="padding-left:16px"> </div>
       </div>
@@ -50,8 +50,9 @@
       }
       </script>
       </header>
-      <section>
-      <!--# Luis F. Abanto-Leon-->
+
+<section>
+<!--# Luis F. Abanto-Leon-->
 <p><img style="float: right;" src="photo.png" height="140" /></p>
 
 <!--##### Luis F. Abanto-Leon -->
