--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
               <!-- <a href="publications.html">publications</a> -->
               <a class="active" href="publications.html">Publications</a>
               <!-- <a href="academic-service.html">Academic Service</a> -->
-              <!-- <a class="" href="academic-service.html">Academic Service</a> -->
+              <a class="" href="academic-service.html">Academic Service</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
       <div style="padding-left:16px"> </div>
       </div>
