--- a/research-interests.html
+++ b/research-interests.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.6">
-    <link rel="stylesheet" href="releases/v5-6-3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Begin Jekyll SEO tag v2.5.0 -->
@@ -95,8 +95,10 @@
 <h3 id="post-4-papers">References</h3>
 
 
-</section>
+</div>
 <footer>
+<p>TU Darmstadt [Dunky]</a></p>
 </footer>
+
 </body>
 </html>
