--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 
 </div>
 <footer>
-<p>TU Darmstadt [Dunkel]</a></p>
+<p>TU Darmstadt [Dunky]</a></p>
 </footer>
 
 </body>
