--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 
 </div>
 <footer>
+<a ><img src="https://flaghitcounter.com/DO/"></a>
 <p>TU Darmstadt [Dunky]</a></p>
 </footer>
 
