--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 
 </div>
 <footer>
-<a href="http://www.flagcounter.me/details/bdt"><img src="http://www.flagcounter.me/bdt/" alt="Flag Counter"></a>
+<a><img src="http://www.flagcounter.me/bdt/" alt="Flag Counter"></a>
 <p>TU Darmstadt [Dunky]</a></p>
 </footer>
 
