--- a/publications.html
+++ b/publications.html
@@ -19,7 +19,7 @@
 <!-- End Jekyll SEO tag -->
     <link rel="stylesheet" href="css/style.css">
     <script src="js/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=0.6, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=0.6, user-scalable=yes">
 
 </head>
 
