--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Personal webpage of Luis F. Abanto-Leon." />
 <meta property="og:description" content="Personal webpage of Luis F. Abanto-Leon." />
-<link rel="canonical" href="httpss://luis-f-abanto-leon.github.io/" />
-<meta property="og:url" content="httpss://luis-f-abanto-leon.github.io/" />
+<link rel="canonical" href="https://luis-f-abanto-leon.github.io/" />
+<meta property="og:url" content="https://luis-f-abanto-leon.github.io/" />
 <meta property="og:site_name" content="Luis F. Abanto-Leon" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"Luis F. Abanto-Leon","url":"httpss://luis-f-abanto-leon.github.io/","name":"Luis F. Abanto-Leon","description":"Personal webpage of Luis F. Abanto-Leon.","@context":"https://schema.org"}</script>
+{"@type":"WebSite","headline":"Luis F. Abanto-Leon","url":"https://luis-f-abanto-leon.github.io/","name":"Luis F. Abanto-Leon","description":"Personal webpage of Luis F. Abanto-Leon.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
     <link rel="stylesheet" href="css/style.css">
     <script src="js/scale.fix.js"></script>
@@ -88,12 +88,12 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 <h2 id="academic-profiles">Academic Profiles</h2>
 <hr />
 <ul>
-  <li><a href="httpss://scholar.google.com.tw/citations?hl=de&user=P51I-OsAAAAJ" target="_blank">Google Scholar</a> </li>
-  <li><a href="httpss://dblp.org/pers/hd/a/Abanto=Leon:Luis_F=" target="_blank">DBLP</a></li>
-  <li><a href="httpss://www.researchgate.net/profile/Luis_F_Abanto-Leon" target="_blank">Research Gate</a></li>
-  <li><a href="httpss://www.semanticscholar.org/author/Luis-F.-Abanto-Leon/26978441" target="_blank">Semantic Scholar</a></li>
-  <li><a href="httpss://orcid.org/0000-0002-3533-7928" target="_blank">ORCID</a></li>
-  <li><a href="httpss://academic.microsoft.com/search?q=Luis+F.+Abanto-Leon" target="_blank">Academic Microsoft</a></li>
+  <li><a href="https://scholar.google.com.tw/citations?hl=de&user=P51I-OsAAAAJ" target="_blank">Google Scholar</a> </li>
+  <li><a href="https://dblp.org/pers/hd/a/Abanto=Leon:Luis_F=" target="_blank">DBLP</a></li>
+  <li><a href="https://www.researchgate.net/profile/Luis_F_Abanto-Leon" target="_blank">Research Gate</a></li>
+  <li><a href="https://www.semanticscholar.org/author/Luis-F.-Abanto-Leon/26978441" target="_blank">Semantic Scholar</a></li>
+  <li><a href="https://orcid.org/0000-0002-3533-7928" target="_blank">ORCID</a></li>
+  <li><a href="https://academic.microsoft.com/search?q=Luis+F.+Abanto-Leon" target="_blank">Academic Microsoft</a></li>
 </ul>
 
 
