--- a/academic-service.html
+++ b/academic-service.html
@@ -11,11 +11,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Personal webpage of Luis F. Abanto-Leon." />
 <meta property="og:description" content="Personal webpage of Luis F. Abanto-Leon." />
-<link rel="canonical" href="httpss://luis-f-abanto-leon.github.io/academic-service.html" />
-<meta property="og:url" content="httpss://luis-f-abanto-leon.github.io/academic-service.html" />
+<link rel="canonical" href="https://luis-f-abanto-leon.github.io/academic-service.html" />
+<meta property="og:url" content="https://luis-f-abanto-leon.github.io/academic-service.html" />
 <meta property="og:site_name" content="Luis F. Abanto-Leon" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Associate Editor","url":"httpss://luis-f-abanto-leon.github.io/academic-service.html","description":"Personal webpage of Luis F. Abanto-Leon.","@context":"https://schema.org"}</script>
+{"@type":"WebPage","headline":"Associate Editor","url":"https://luis-f-abanto-leon.github.io/academic-service.html","description":"Personal webpage of Luis F. Abanto-Leon.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
     <link rel="stylesheet" href="css/style.css">
     <script src="js/scale.fix.js"></script>
@@ -75,7 +75,7 @@
 
 <h4 id="reviewer">Conferences</h3>
 <ul>
-  <li><a href="httpss://globecom2019.ieee-globecom.org/" target="_blank">IEEE GLOBECOM 2019,</a> Waikoloa, USA</li>
+  <li><a href="https://globecom2019.ieee-globecom.org/" target="_blank">IEEE GLOBECOM 2019,</a> Waikoloa, USA</li>
   <li><a href="https://www.ieeevtc.org/vtc2019spring/" target="_blank">VTC 2019 - Spring,</a> Kuala Lumpur, Malaysia</li>
   <li><a href="https://www.ieeevtc.org/vtc2018fall/" target="_blank">VTC 2018 - Fall,</a> Chicago, USA</li>
   <li><a href="https://www.ieeevtc.org/vtc2018spring/" target="_blank">VTC 2018 - Spring,</a> Porto, Portugal</li>
