--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 </div>
 <footer>
 
-<a><img src="https://www.flagcounter.me/bdt/" alt="Flag Counter"></a>
+<a><img src="https://s05.flagcounter.com/count2/Hks6/bg_6B7989/txt_000000/border_6B7989/columns_8/maxflags_30/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 
 <p>TU Darmstadt [Dunky]</a></p>
 </footer>
