--- a/publications.html
+++ b/publications.html
@@ -97,6 +97,7 @@
 	<div class="bibtitle">
     <strong>Hybrid Precoding for Multi-Group Multicasting in mmWave Systems.</strong>
 		<a href="https://arxiv.org/abs/1908.02678" target="_blank">(DOI)</a>
+		<a href="slides/GLOBECOM_2019_Slides.pdf" style="color: #cc0000" target="_blank">[Slides]</a>
      
 	<div class="bibauthors">
 		<a href="https://scholar.google.nl/citations?user=P51I-OsAAAAJ&amp;hl=en">Luis F. Abanto-Leon</a>, <a href="https://dblp.org/pers/hd/h/Hollick:Matthias">Matthias Hollick</a>, <a href="https://scholar.google.nl/citations?user=diC_npEAAAAJ&amp;hl=en">Gek Hong Sim</a> 
