--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 <h2 id="recent-updates">Recent Updates</h2>
 <hr />
 <ul>
-  <li>Paper accepted in IEEE Globecom 2019</li>
+  <li>Two papers accepted at IEEE ICC 2020</li>
+  <li>Paper accepted at IEEE Globecom 2019</li>
   <li>Paper accepted in IET Communications</li>
 </ul>
 
