--- a/publications.html
+++ b/publications.html
@@ -90,6 +90,26 @@
 <div id="year-2019" class="bibyear">
 
 
+<b>2020</b>
+<li>
+    <p>
+	<div class="bibentry-article">
+	<div class="bibtitle">
+    <strong>Fairness-Aware Hybrid Precoding for mmWave NOMA Unicast/Multicast Transmissions in Industrial IoT.</strong>
+		<a href="https://arxiv.org/pdf/2002.00698.pdf" target="_blank">(DOI)</a>
+		<a href="slides/GLOBECOM_2019_Slides.pdf" style="color: #cc0000" target="_blank">[Slides]</a>
+     
+	<div class="bibauthors">
+		<a href="https://scholar.google.nl/citations?user=P51I-OsAAAAJ&amp;hl=en">Luis F. Abanto-Leon</a>, <a href="https://scholar.google.nl/citations?user=diC_npEAAAAJ&amp;hl=en">Gek Hong Sim</a> 
+   
+	<div class="bibdetails">
+		Proceedings of the 2020 IEEE International Conference on Communications
+		<a href="https://icc2020.ieee-icc.org/" style="color: #0000FF" target="_blank">(IEEE ICC 2020)</a>
+    </p>
+</li>
+
+
+
 <b>2019</b>
 <li>
     <p>
