changes in pubs and index
changes in pubs and index

--- a/publications.html
+++ b/publications.html
@@ -104,7 +104,7 @@
 		<a href="https://scholar.google.nl/citations?user=P51I-OsAAAAJ&amp;hl=en">Luis F. Abanto-Leon</a>, <a href="https://dblp.org/pers/hd/h/Hollick:Matthias">Matthias Hollick</a>, <a href="https://scholar.google.nl/citations?user=diC_npEAAAAJ&amp;hl=en">Gek Hong Sim</a> 
    
 	<div class="bibdetails">
-		Proceedings of the 21ST IEEE InternationalL Symposium on a World of Wireless, Mobile and Multimedia Networks
+		Proceedings of the 21st IEEE International Symposium on a World of Wireless, Mobile and Multimedia Networks
 		<a href="http://www.cs.ucc.ie/wowmom2020/" style="color: #0000FF" target="_blank">(IEEE WOWMOM 2020)</a>
     </p>
 </li>
@@ -162,6 +162,19 @@
 	<div class="bibdetails">
 		Proceedings of the 2019 IEEE Global Communications Conference
 		<a href="https://globecom2019.ieee-globecom.org/" style="color: #0000FF" target="_blank">(IEEE GLOBECOM 2019)</a>
+    </p>
+</li>
+
+<li>
+    <p>
+	<div class="bibentry-article">
+	<div class="bibtitle">
+    <strong>Decentralized Subchannel Scheduling for C-V2X Mode-4: A Non-Standard Configuration for CAM Retransmissions.</strong>
+		<a href="https://arxiv.org/pdf/1912.13137.pdf" target="_blank">(DOI)</a>
+     
+	<div class="bibauthors">
+		<a href="https://scholar.google.nl/citations?user=P51I-OsAAAAJ&amp;hl=en">Luis F. Abanto-Leon</a>
+   
     </p>
 </li>
 
