updated google scholar page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 <h2 id="academic-profiles">Academic Profiles</h2>
 <hr />
 <ul>
-  <li><a href="https://scholar.google.com.tw/citations?hl=de&user=P51I-OsAAAAJ" target="_blank">Google Scholar</a> </li>
+  <li><a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Google Scholar</a> </li>
   <li><a href="https://dblp.org/pers/hd/a/Abanto=Leon:Luis_F=" target="_blank">DBLP</a></li>
   <li><a href="https://www.researchgate.net/profile/Luis_F_Abanto-Leon" target="_blank">Research Gate</a></li>
   <li><a href="https://www.semanticscholar.org/author/Luis-F.-Abanto-Leon/26978441" target="_blank">Semantic Scholar</a></li>
