--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 </ul>
 
 
+<h2 id="society-memberships">Society Memberships</h2>
+<hr />
+<ul>
+  <li><a href="https://www.comsoc.org/" target="_blank">IEEE Communications Society</a></li>
+  <li><a href="https://signalprocessingsociety.org/" target="_blank">IEEE Signal Processing Society</a></li>
+  <li><a href="https://vtsociety.org/" target="_blank">IEEE Vehicular Technology Society</a></li>
+  <li><a href="https://www.computer.org/" target="_blank">IEEE Computer Society</a></li>
+</ul>
+
+
+
 </section>
 
 </div>
