--- a/academic-service.html
+++ b/academic-service.html
@@ -75,10 +75,11 @@
 
 <h4 id="reviewer">Conferences</h3>
 <ul>
+  <li><a href="https://events.vtsociety.org/vtc2020-fall/" target="_blank">IEEE VTC 2020 - Fall,</a> Victoria, Canada</li>	
   <li><a href="https://globecom2019.ieee-globecom.org/" target="_blank">IEEE GLOBECOM 2019,</a> Waikoloa, USA</li>
-  <li><a href="https://www.ieeevtc.org/vtc2019spring/" target="_blank">VTC 2019 - Spring,</a> Kuala Lumpur, Malaysia</li>
-  <li><a href="https://www.ieeevtc.org/vtc2018fall/" target="_blank">VTC 2018 - Fall,</a> Chicago, USA</li>
-  <li><a href="https://www.ieeevtc.org/vtc2018spring/" target="_blank">VTC 2018 - Spring,</a> Porto, Portugal</li>
+  <li><a href="https://www.ieeevtc.org/vtc2019spring/" target="_blank">IEEE VTC 2019 - Spring,</a> Kuala Lumpur, Malaysia</li>
+  <li><a href="https://www.ieeevtc.org/vtc2018fall/" target="_blank">IEEE VTC 2018 - Fall,</a> Chicago, USA</li>
+  <li><a href="https://www.ieeevtc.org/vtc2018spring/" target="_blank">IEEE VTC 2018 - Spring,</a> Porto, Portugal</li>
 </ul>
 
 </section>
