--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,7 @@
 <section>
 
 
-<h2 id="journal-publications">Journal publications</h2>
+<h2 id="journal-publications">Journal Publications</h2>
 <hr />
 
 
@@ -81,7 +81,7 @@
 </ol>
 
 
-<h2 id="conference-publications">Conference publications</h2>
+<h2 id="conference-publications">Conference Publications</h2>
 <hr />
 
 
