--- a/academic-service.html
+++ b/academic-service.html
@@ -67,6 +67,7 @@
   <li>IEEE Transactions on Mobile Computing</li>
   <li>IEEE Transactions on Big Data</li>
   <li>IEEE Transactions on Cognitive Communications and Networking</li>
+  <li>IEEE Communications Letters</li>
   <li>IEEE Access</li>
   <li>Elsevier Vehicular Communications</li>
   <li>EURASIP Journal of Speech Communication</li>
