--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
   <li><a href="https://www.semanticscholar.org/author/Luis-F.-Abanto-Leon/26978441" target="_blank">Semantic Scholar</a></li>
   <li><a href="https://orcid.org/0000-0002-3533-7928" target="_blank">ORCID</a></li>
   <li><a href="https://academic.microsoft.com/search?q=Luis+F.+Abanto-Leon" target="_blank">Academic Microsoft</a></li>
+  <span id="badgeCont143"><script type="text/javascript" src="https://publons.com/mashlets?el=badgeCont143&rid=AAN-6485-2020"></script></span>
 </ul>
 
 
