--- a/academic-service.html
+++ b/academic-service.html
@@ -52,10 +52,12 @@
 
 <section>
 	  
-<h3 id="tpc-chair">Technical Program Committee Chair</h3>
+<h3 id="tpc-chair">Conference Chairing</h3>
 <!--- <div class="buttonstyle"><a href="#">Button</a></div> Advances in Industrial Networks and Intelligent Systems in 2nd International Conference on Communication, Management and Information Technology ICCMIT 2016, Italy, April, 2016-->
 <ul>
   <li><a href="https://www.ieeevtc.org/vtc2018fall/" target="_blank">VTC 2018 - Fall,</a> Chicago, USA</li>
+  <li><a href="https://icc2020.ieee-icc.org/" target="_blank">ICC 2020 - WC5: Machine Learning I,</a> Dublin, Ireland</li>
+  <li><a href="https://icc2020.ieee-icc.org/" target="_blank">ICC 2020 - WC20: Machine Learning III,</a> Dublin, Ireland</li>
 </ul>
 
 <hr />
@@ -70,7 +72,8 @@
   <li>IEEE Communications Letters</li>
   <li>IEEE Access</li>
   <li>Elsevier Vehicular Communications</li>
-  <li>EURASIP Journal of Speech Communication</li>
+  <li>Elsevier Computer Communications</li>
+  <li>Elsevier Journal of Speech Communication</li>
 </ul>
 
 
