--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@ Email: labanto[AT]seemoo[DOT]tu-darmstadt[DOT]de; labanto[AT]ieee[DOT]org</p>
 I am PhD student at Technische Universität Darmstadt. My research focuses on millimeter-wave for to Industry 4.0. More specfically, I am working on the intergration of NOMA, massive MIMO, hybrid precoding and scheduling for massive IoT communications.
 </ul>
 
+<h2 id="research-interests">Affiliations</h2>
+<hr />
+<ul>
+  <li><i>Peruvian University of Applied Sciences</i>, Department of Electrical Engineering</li>	
+  <li><i>Tohoku University</i> (東北大学), Department of Communications Engineering</li>
+  <li><i>Eindhoven University of Technology</i>, Department of Electrical Engineering</li>
+  <li><i>Technical University of Darmstadt</i>, Department of Computer Science</li>
+</ul>
+
 <h2 id="research-interests">Research Interests</h2>
 <hr />
 <ul>
@@ -107,6 +116,7 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
   <li><a href="https://signalprocessingsociety.org/" target="_blank">IEEE Signal Processing Society</a></li>
   <li><a href="https://vtsociety.org/" target="_blank">IEEE Vehicular Technology Society</a></li>
   <li><a href="https://www.computer.org/" target="_blank">IEEE Computer Society</a></li>
+  <li><a href="https://www.itsoc.org/" target="_blank">IEEE Information Theory Society</a></li>
 </ul>
 
 
