--- a/academic-service.html
+++ b/academic-service.html
@@ -66,6 +66,7 @@
 
 <h4 id="reviewer">Journals</h3>
 <ul>
+  <li>IEEE Transactions on Vehicular Technology</li>	
   <li>IEEE Transactions on Mobile Computing</li>
   <li>IEEE Transactions on Big Data</li>
   <li>IEEE Transactions on Cognitive Communications and Networking</li>
@@ -79,6 +80,7 @@
 
 <h4 id="reviewer">Conferences</h3>
 <ul>
+  <li><a href="https://globecom2020.ieee-globecom.org/" target="_blank">IEEE GLOBECOM 2020 - Fall,</a> Taipei, Taiwan</li>	
   <li><a href="https://events.vtsociety.org/vtc2020-fall/" target="_blank">IEEE VTC 2020 - Fall,</a> Victoria, Canada</li>	
   <li><a href="https://globecom2019.ieee-globecom.org/" target="_blank">IEEE GLOBECOM 2019,</a> Waikoloa, USA</li>
   <li><a href="https://www.ieeevtc.org/vtc2019spring/" target="_blank">IEEE VTC 2019 - Spring,</a> Kuala Lumpur, Malaysia</li>
