--- a/academic-service.html
+++ b/academic-service.html
@@ -67,14 +67,14 @@
 <h4 id="reviewer">Journals</h3>
 <ul>
   <li>IEEE Transactions on Vehicular Technology</li>	
-  <li>IEEE Transactions on Mobile Computing</li>
   <li>IEEE Transactions on Big Data</li>
   <li>IEEE Transactions on Cognitive Communications and Networking</li>
+  <li>IEEE Signal Processing Letters</li>
   <li>IEEE Communications Letters</li>
   <li>IEEE Access</li>
   <li>Elsevier Vehicular Communications</li>
   <li>Elsevier Computer Communications</li>
-  <li>Elsevier Journal of Speech Communication</li>
+  <li>Elsevier Speech Communication</li>
 </ul>
 
 
