--- a/academic-service.html
+++ b/academic-service.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head><meta https-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.6">
-    <link rel="stylesheet" href="css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Begin Jekyll SEO tag v2.5.0 -->
@@ -17,8 +17,8 @@
 <script type="application/ld+json">
 {"@type":"WebPage","headline":"Associate Editor","url":"https://luis-f-abanto-leon.github.io/academic-service.html","description":"Personal webpage of Luis F. Abanto-Leon.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/scale.fix.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=0.6, user-scalable=yes">
 
 </head>
