--- a/academic-service.html
+++ b/academic-service.html
@@ -52,7 +52,7 @@
 
 <section>
 	  
-<h3 id="tpc-chair">Conference Chairing</h3>
+<h3 id="tpc-chair">Conference Chair</h3>
 <!--- <div class="buttonstyle"><a href="#">Button</a></div> Advances in Industrial Networks and Intelligent Systems in 2nd International Conference on Communication, Management and Information Technology ICCMIT 2016, Italy, April, 2016-->
 <ul>
   <li><a href="https://www.ieeevtc.org/vtc2018fall/" target="_blank">VTC 2018 - Fall,</a> Chicago, USA</li>
