--- a/test.html
+++ b/test.html
@@ -81,7 +81,7 @@
     <div class="container">
 
       <div class="intro-img">
-        <img src="img/intro-img.svg" alt="" class="img-fluid">
+        <img src="img/about-extra-1.svg" alt="" class="img-fluid">
       </div>
 
       <div class="intro-info">
@@ -154,83 +154,73 @@
   
   
     <!--==========================
-      About Us Section
+      Nosotros
     ============================-->
     <section id="about">
       <div class="container">
 
         <header class="section-header">
-          <h3>About Us</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Nosotros</h3>
+          <p>Somos una empresa consultora conformada por profesionales de la salud que trabajamos con responsabilidad y ética. Asesoramos y brindamos soluciones a empresas y personas naturales que deseen <b>importar y comercializar en el Perú</b>. Nuestra amplia experiencia nos permite culminar, con éxito y en corto tiempo, las gestiones ante las autoridades sanitarias y regulatorias del Perú (<b>DIGEMID</b> / <b>DIGESA</b>). Nos especializamos en <b>Asuntos Regulatorios</b>; <b>Gestión de la Calidad</b>;  <b>Comercialización de Productos Farmacéuticos</b>; <b>Comercialización de Dispositivos Médicos</b>; <b>Comercialización de Productos Sanitarios y Alimentos</b>; <b>Registro de Establecimientos Farmacéuticos </b> (laboratorios, droguerías, almacenes), <b>Traducciones Técnicas</b>.</p>
         </header>
 
-        <div class="row about-container">
+        <div class="row about-extra">
 
           <div class="col-lg-6 content order-lg-1 order-2">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
 
             <div class="icon-box wow fadeInUp">
-              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+              <!-- <div class="icon"><i class="fa fa-bar-chart"></i></div> -->
+              <h4 class="title"><a href="">Nuestra Misión</a></h4>
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
             </div>
 
-            <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
-              <div class="icon"><i class="fa fa-photo"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+            <div class="icon-box wow fadeInUp" data-wow-delay="0.1s">
+              <!-- <div class="icon"><i class="fa fa-bar-chart"></i></div> -->
+              <h4 class="title"><a href="">Nuestra Visión</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-
-            <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-              <div class="icon"><i class="fa fa-bar-chart"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
             </div>
 
           </div>
 
           <div class="col-lg-6 background order-lg-2 order-1 wow fadeInUp">
-            <img src="img/about-img.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="row about-extra">
-          <div class="col-lg-6 wow fadeInUp">
-            <img src="img/about-extra-1.svg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
-            <h4>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h4>
-            <p>
-              Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
-            </p>
-            <p>
-              Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum.
-            </p>
-          </div>
-        </div>
-
-        <div class="row about-extra">
-          <div class="col-lg-6 wow fadeInUp order-1 order-lg-2">
             <img src="img/about-extra-2.svg" class="img-fluid" alt="">
           </div>
-
-          <div class="col-lg-6 wow fadeInUp pt-4 pt-lg-0 order-2 order-lg-1">
-            <h4>Neque saepe temporibus repellat ea ipsum et. Id vel et quia tempora facere reprehenderit.</h4>
-            <p>
-             Delectus alias ut incidunt delectus nam placeat in consequatur. Sed cupiditate quia ea quis. Voluptas nemo qui aut distinctio. Cumque fugit earum est quam officiis numquam. Ducimus corporis autem at blanditiis beatae incidunt sunt. 
-            </p>
-            <p>
-              Voluptas saepe natus quidem blanditiis. Non sunt impedit voluptas mollitia beatae. Qui esse molestias. Laudantium libero nisi vitae debitis. Dolorem cupiditate est perferendis iusto.
-            </p>
-            <p>
-              Eum quia in. Magni quas ipsum a. Quis ex voluptatem inventore sint quia modi. Numquam est aut fuga mollitia exercitationem nam accusantium provident quia.
-            </p>
-          </div>
-          
         </div>
+
+        <!-- <div class="row about-extra"> -->
+          <!-- <div class="col-lg-6 wow fadeInUp"> -->
+            <!-- <img src="img/about-extra-1.svg" class="img-fluid" alt=""> -->
+          <!-- </div> -->
+          <!-- <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0"> -->
+            <!-- <h4>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h4> -->
+            <!-- <p> -->
+              <!-- Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a. -->
+            <!-- </p> -->
+            <!-- <p> -->
+              <!-- Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum. -->
+            <!-- </p> -->
+          <!-- </div> -->
+        <!-- </div> -->
+
+        <!-- <div class="row about-extra"> -->
+          <!-- <div class="col-lg-6 wow fadeInUp order-1 order-lg-2"> -->
+            <!-- <img src="img/about-extra-2.svg" class="img-fluid" alt=""> -->
+          <!-- </div> -->
+
+          <!-- <div class="col-lg-6 wow fadeInUp pt-4 pt-lg-0 order-2 order-lg-1"> -->
+            <!-- <h4>Neque saepe temporibus repellat ea ipsum et. Id vel et quia tempora facere reprehenderit.</h4> -->
+            <!-- <p> -->
+             <!-- Delectus alias ut incidunt delectus nam placeat in consequatur. Sed cupiditate quia ea quis. Voluptas nemo qui aut distinctio. Cumque fugit earum est quam officiis numquam. Ducimus corporis autem at blanditiis beatae incidunt sunt.  -->
+            <!-- </p> -->
+            <!-- <p> -->
+              <!-- Voluptas saepe natus quidem blanditiis. Non sunt impedit voluptas mollitia beatae. Qui esse molestias. Laudantium libero nisi vitae debitis. Dolorem cupiditate est perferendis iusto. -->
+            <!-- </p> -->
+            <!-- <p> -->
+              <!-- Eum quia in. Magni quas ipsum a. Quis ex voluptatem inventore sint quia modi. Numquam est aut fuga mollitia exercitationem nam accusantium provident quia. -->
+            <!-- </p> -->
+          <!-- </div> -->
+          
+        <!-- </div> -->
 
       </div>
     </section><!-- #about -->
