--- a/test.html
+++ b/test.html
@@ -46,27 +46,27 @@
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#services">Servicios</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li>
+          <!-- <li class="drop-down"><a href="">Drop Down</a> -->
+            <!-- <ul> -->
+              <!-- <li><a href="#">Drop Down 1</a></li> -->
+              <!-- <li class="drop-down"><a href="#">Drop Down 2</a> -->
+                <!-- <ul> -->
+                  <!-- <li><a href="#">Deep Drop Down 1</a></li> -->
+                  <!-- <li><a href="#">Deep Drop Down 2</a></li> -->
+                  <!-- <li><a href="#">Deep Drop Down 3</a></li> -->
+                  <!-- <li><a href="#">Deep Drop Down 4</a></li> -->
+                  <!-- <li><a href="#">Deep Drop Down 5</a></li> -->
+                <!-- </ul> -->
+              <!-- </li> -->
+              <!-- <li><a href="#">Drop Down 3</a></li> -->
+              <!-- <li><a href="#">Drop Down 4</a></li> -->
+              <!-- <li><a href="#">Drop Down 5</a></li> -->
+            <!-- </ul> -->
+          <!-- </li> -->
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav><!-- .main-nav -->
@@ -87,8 +87,11 @@
       <div class="intro-info">
         <h2>Servicios de Consultoría en Asuntos Regulatorios</h2>
         <div>
-          <a href="#contact" class="btn-get-started scrollto">Contacto</a>
-          <a href="#services" class="btn-services scrollto">Nuestros Servicios</a>
+          <a href="#contact" class="btn-get-started scrollto">Contáctenos</a>
+          <a href="#services" class="btn-services scrollto">Servicios</a>
+		  <div class="clearfix">
+		  <p> Are you looking to introduce a new product in the Peruvian market and comply with the local regulations? Contact us! </p>
+		  </div>
         </div>
       </div>
 
@@ -161,7 +164,7 @@
 
         <header class="section-header">
           <h3>Nosotros</h3>
-          <p>Somos una empresa consultora conformada por profesionales de la salud que trabajamos con responsabilidad y ética. Asesoramos y brindamos soluciones a empresas y personas naturales que deseen <b>importar y comercializar en el Perú</b>. Nuestra amplia experiencia nos permite culminar, con éxito y en corto tiempo, las gestiones ante las autoridades sanitarias y regulatorias del Perú (<b>DIGEMID</b> / <b>DIGESA</b>). Nos especializamos en <b>Asuntos Regulatorios</b>; <b>Gestión de la Calidad</b>;  <b>Comercialización de Productos Farmacéuticos</b>; <b>Comercialización de Dispositivos Médicos</b>; <b>Comercialización de Productos Sanitarios y Alimentos</b>; <b>Registro de Establecimientos Farmacéuticos </b> (laboratorios, droguerías, almacenes), <b>Traducciones Técnicas</b>.</p>
+          <p>Somos una empresa consultora conformada por profesionales de la salud que trabajamos con responsabilidad y ética. Asesoramos y brindamos soluciones a empresas y personas naturales que deseen <b>importar y comercializar en el Perú</b>. Nuestra amplia experiencia nos permite culminar, con éxito y en corto tiempo, las gestiones ante las autoridades sanitarias y regulatorias del Perú (<b>DIGEMID</b> / <b>DIGESA</b>). Nos especializamos en <b>Asuntos Regulatorios</b>; <b>Gestión de la Calidad</b>;  <b>Comercialización de Productos Farmacéuticos</b>; <b>Comercialización de Dispositivos Médicos</b>; <b>Comercialización de Productos Sanitarios y Alimentos</b>; <b>Registro de Establecimientos Farmacéuticos </b> (laboratorios, droguerías, almacenes); <b>Traducciones Técnicas</b>.</p>
         </header>
 
         <div class="row about-extra">
@@ -171,13 +174,13 @@
             <div class="icon-box wow fadeInUp">
               <!-- <div class="icon"><i class="fa fa-bar-chart"></i></div> -->
               <h4 class="title"><a href="">Nuestra Misión</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <p class="description">Nuestra misión es comprometernos con el éxito de nuestros clientes y proporcionar soluciones y servicios personalizados de alta calidad, en los marcos normativo, técnico y legal, con el fin de obtener los resultados deseados.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.1s">
               <!-- <div class="icon"><i class="fa fa-bar-chart"></i></div> -->
               <h4 class="title"><a href="">Nuestra Visión</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">Nuestra visión es consolidarnos como una consultora líder en el ámbito de regulación farmacéutica y gestión de la calidad con reconocimiento a nivel nacional e internacional, y así mismo convertirnos en socios estratégico de nuestros clientes.</p>
             </div>
 
           </div>
@@ -291,80 +294,80 @@
     <!--==========================
       Why Us Section
     ============================-->
-    <section id="why-us" class="wow fadeIn">
-      <div class="container">
-        <header class="section-header">
-          <h3>Why choose us?</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
-        </header>
+    <!-- <section id="why-us" class="wow fadeIn"> -->
+      <!-- <div class="container"> -->
+        <!-- <header class="section-header"> -->
+          <!-- <h3>Why choose us?</h3> -->
+          <!-- <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p> -->
+        <!-- </header> -->
 
-        <div class="row row-eq-height justify-content-center">
+        <!-- <div class="row row-eq-height justify-content-center"> -->
 
-          <div class="col-lg-4 mb-4">
-            <div class="card wow bounceInUp">
-                <i class="fa fa-diamond"></i>
-              <div class="card-body">
-                <h5 class="card-title">Corporis dolorem</h5>
-                <p class="card-text">Deleniti optio et nisi dolorem debitis. Aliquam nobis est temporibus sunt ab inventore officiis aut voluptatibus.</p>
-                <a href="#" class="readmore">Read more </a>
-              </div>
-            </div>
-          </div>
+          <!-- <div class="col-lg-4 mb-4"> -->
+            <!-- <div class="card wow bounceInUp"> -->
+                <!-- <i class="fa fa-diamond"></i> -->
+              <!-- <div class="card-body"> -->
+                <!-- <h5 class="card-title">Corporis dolorem</h5> -->
+                <!-- <p class="card-text">Deleniti optio et nisi dolorem debitis. Aliquam nobis est temporibus sunt ab inventore officiis aut voluptatibus.</p> -->
+                <!-- <a href="#" class="readmore">Read more </a> -->
+              <!-- </div> -->
+            <!-- </div> -->
+          <!-- </div> -->
 
-          <div class="col-lg-4 mb-4">
-            <div class="card wow bounceInUp">
-                <i class="fa fa-language"></i>
-              <div class="card-body">
-                <h5 class="card-title">Voluptates dolores</h5>
-                <p class="card-text">Voluptates nihil et quis omnis et eaque omnis sint aut. Ducimus dolorum aspernatur.</p>
-                <a href="#" class="readmore">Read more </a>
-              </div>
-            </div>
-          </div>
+          <!-- <div class="col-lg-4 mb-4"> -->
+            <!-- <div class="card wow bounceInUp"> -->
+                <!-- <i class="fa fa-language"></i> -->
+              <!-- <div class="card-body"> -->
+                <!-- <h5 class="card-title">Voluptates dolores</h5> -->
+                <!-- <p class="card-text">Voluptates nihil et quis omnis et eaque omnis sint aut. Ducimus dolorum aspernatur.</p> -->
+                <!-- <a href="#" class="readmore">Read more </a> -->
+              <!-- </div> -->
+            <!-- </div> -->
+          <!-- </div> -->
 
-          <div class="col-lg-4 mb-4">
-            <div class="card wow bounceInUp">
-                <i class="fa fa-object-group"></i>
-              <div class="card-body">
-                <h5 class="card-title">Eum ut aspernatur</h5>
-                <p class="card-text">Autem quod nesciunt eos ea aut amet laboriosam ab. Eos quis porro in non nemo ex. </p>
-                <a href="#" class="readmore">Read more </a>
-              </div>
-            </div>
-          </div>
+          <!-- <div class="col-lg-4 mb-4"> -->
+            <!-- <div class="card wow bounceInUp"> -->
+                <!-- <i class="fa fa-object-group"></i> -->
+              <!-- <div class="card-body"> -->
+                <!-- <h5 class="card-title">Eum ut aspernatur</h5> -->
+                <!-- <p class="card-text">Autem quod nesciunt eos ea aut amet laboriosam ab. Eos quis porro in non nemo ex. </p> -->
+                <!-- <a href="#" class="readmore">Read more </a> -->
+              <!-- </div> -->
+            <!-- </div> -->
+          <!-- </div> -->
 
-        </div>
+        <!-- </div> -->
 
-        <div class="row counters">
+        <!-- <div class="row counters"> -->
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">274</span>
-            <p>Clients</p>
-          </div>
+          <!-- <div class="col-lg-3 col-6 text-center"> -->
+            <!-- <span data-toggle="counter-up">274</span> -->
+            <!-- <p>Clients</p> -->
+          <!-- </div> -->
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">421</span>
-            <p>Projects</p>
-          </div>
+          <!-- <div class="col-lg-3 col-6 text-center"> -->
+            <!-- <span data-toggle="counter-up">421</span> -->
+            <!-- <p>Projects</p> -->
+          <!-- </div> -->
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1,364</span>
-            <p>Hours Of Support</p>
-          </div>
+          <!-- <div class="col-lg-3 col-6 text-center"> -->
+            <!-- <span data-toggle="counter-up">1,364</span> -->
+            <!-- <p>Hours Of Support</p> -->
+          <!-- </div> -->
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">18</span>
-            <p>Hard Workers</p>
-          </div>
+          <!-- <div class="col-lg-3 col-6 text-center"> -->
+            <!-- <span data-toggle="counter-up">18</span> -->
+            <!-- <p>Hard Workers</p> -->
+          <!-- </div> -->
   
-        </div>
+        <!-- </div> -->
 
-      </div>
-    </section>
+      <!-- </div> -->
+    <!-- </section> -->
 
     <!-- <!-- <!--========================== -->
       <!-- Portfolio Section -->
-    <!-- ============================--> -->
+    <!-- ============================--> 
     <!-- <section id="portfolio" class="clearfix"> -->
       <!-- <div class="container"> -->
 
@@ -514,12 +517,12 @@
         <!-- </div> -->
 
       <!-- </div> -->
-    <!-- </section><!-- #portfolio --> --> -->
+    <!-- </section><!-- #portfolio --> 
 
 
     <!-- <!--========================== -->
       <!-- Team Section -->
-    <!-- ============================--> -->
+    <!-- ============================--> 
     <!-- <section id="team"> -->
       <!-- <div class="container"> -->
         <!-- <div class="section-header"> -->
@@ -604,17 +607,17 @@
         <!-- </div> -->
 
       <!-- </div> -->
-    <!-- </section><!-- #team --> -->
+    <!-- </section><!-- #team --> 
 
     <!--==========================
-      Clients Section
+      Nuestros Clientes
     ============================-->
     <section id="clients" class="section-bg">
 
       <div class="container">
 
         <div class="section-header">
-          <h3>Our CLients</h3>
+          <h3>Nuestros Clientes</h3>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque dere santome nida.</p>
         </div>
 
@@ -681,7 +684,7 @@
       <div class="container-fluid">
 
         <div class="section-header">
-          <h3>Contact Us</h3>
+          <h3>Contáctenos</h3>
         </div>
 
         <div class="row wow fadeInUp">
@@ -714,16 +717,16 @@
               <form action="" method="post" role="form" class="contactForm">
                 <div class="form-row">
                   <div class="form-group col-lg-6">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                     <div class="validation"></div>
                   </div>
                   <div class="form-group col-lg-6">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email" />
                     <div class="validation"></div>
                   </div>
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
