--- a/test.html
+++ b/test.html
@@ -67,7 +67,7 @@
               <!-- <li><a href="#">Drop Down 5</a></li> -->
             <!-- </ul> -->
           <!-- </li> -->
-          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="#contact">Contáctenos</a></li>
         </ul>
       </nav><!-- .main-nav -->
       
@@ -89,9 +89,8 @@
         <div>
           <a href="#contact" class="btn-get-started scrollto">Contáctenos</a>
           <a href="#services" class="btn-services scrollto">Servicios</a>
-		  <div class="clearfix">
-		  <p> Are you looking to introduce a new product in the Peruvian market and comply with the local regulations? Contact us! </p>
-		  </div>
+		  <p style="color:white">Are you looking to commercialize a new product in the Peruvian market and comply with the local regulations?</p>
+		  <a href="#contact2" class="btn-get-started scrollto">Contact us</a>
         </div>
       </div>
 
@@ -678,7 +677,7 @@
     </section>
 
     <!--==========================
-      Contact Section
+      Contáctenos
     ============================-->
     <section id="contact">
       <div class="container-fluid">
@@ -742,7 +741,10 @@
 
       </div>
     </section><!-- #contact -->
+	
 
+
+	
   </main>
 
   <!--==========================
