changes latest wowmom
chnages september

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 <h2 id="recent-updates">Recent Updates</h2>
 <hr />
 <ul>
+  <li> <b> Best Paper Award at IEEE WOWMOM 2020 </b></li>
+  <li> One paper accepted at <a href="https://globecom2020.ieee-globecom.org/" style="color: #0000FF" target="_blank">IEEE GLOBECOM 2020</a> </li>
   <li> One paper accepted at <a href="http://www.cs.ucc.ie/wowmom2020/" style="color: #0000FF" target="_blank">IEEE WOWMOM 2020</a> </li>	
   <li> Two papers accepted at <a href="https://icc2020.ieee-icc.org/" style="color: #0000FF" target="_blank">IEEE ICC 2020</a> </li>
-  <li> One paper accepted at <a href="https://globecom2019.ieee-globecom.org/" style="color: #0000FF" target="_blank">IEEE GLOBECOM 2019</a> </li>
-  <li> One paper accepted in <a href="https://digital-library.theiet.org/content/journals/iet-com" style="color: #0000FF" target="_blank">IET Communications</a> </li>
 </ul>
 
 
