--- a/academic-service.html
+++ b/academic-service.html
@@ -66,6 +66,7 @@
 
 <h4 id="reviewer">Journals</h3>
 <ul>
+  <li>IEEE Transactions on Signal Processing</li>	
   <li>IEEE Transactions on Vehicular Technology</li>	
   <li>IEEE Transactions on Big Data</li>
   <li>IEEE Transactions on Cognitive Communications and Networking</li>
