--- a/academic-service.html
+++ b/academic-service.html
@@ -66,12 +66,13 @@
 
 <h4 id="reviewer">Journals</h3>
 <ul>
-  <li>IEEE Transactions on Signal Processing</li>	
-  <li>IEEE Transactions on Vehicular Technology</li>	
-  <li>IEEE Transactions on Big Data</li>
-  <li>IEEE Transactions on Cognitive Communications and Networking</li>
-  <li>IEEE Signal Processing Letters</li>
-  <li>IEEE Communications Letters</li>
+  <li>IEEE Network Magazine</li>	
+  <li>IEEE Transactions on Signal Processing (IEEE TSP)</li>	
+  <li>IEEE Transactions on Vehicular Technology (IEEE TVT)</li>	
+  <li>IEEE Transactions on Big Data (IEEE TBD)</li>
+  <li>IEEE Transactions on Cognitive Communications and Networking (IEEE TCCN)</li>
+  <li>IEEE Signal Processing Letters (IEEE SPL)</li>
+  <li>IEEE Communications Letters (IEEE COMML)</li>
   <li>IEEE Access</li>
   <li>Elsevier Vehicular Communications</li>
   <li>Elsevier Computer Communications</li>
