--- a/academic-service.html
+++ b/academic-service.html
@@ -71,6 +71,7 @@
   <li>IEEE Transactions on Vehicular Technology (IEEE TVT)</li>	
   <li>IEEE Transactions on Big Data (IEEE TBD)</li>
   <li>IEEE Transactions on Cognitive Communications and Networking (IEEE TCCN)</li>
+  <li>IEEE Transactions on Control of Network Systems (IEEE TCNS)</li>
   <li>IEEE Signal Processing Letters (IEEE SPL)</li>
   <li>IEEE Communications Letters (IEEE COMML)</li>
   <li>IEEE Access</li>
