--- a/publications.html
+++ b/publications.html
@@ -90,8 +90,28 @@
 <div id="year-2019" class="bibyear">
 
 
-<b>2020</b>
 
+<b>2021</b>
+
+<li>
+    <p>
+	<div class="bibentry-article">
+	<div class="bibtitle">
+    <strong>Stay Connected, Leave no Trace: Enhancing Security and Privacy in WiFi via Obfuscating Radiometric Fingerprints</strong>
+		<a href="https://arxiv.org/abs/2011.12644" style="color: #FF8C00" target="_blank">[Paper]</a>
+		<a href="slides/WOWMOM_2020_Slides.pdf" style="color: #cc0000" target="_blank">[Slides]</a>
+     
+	<div class="bibauthors">
+		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, <a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Andreas Baeuml</a>, <a href="https://scholar.google.nl/citations?user=diC_npEAAAAJ&amp;hl=en">Gek Hong Sim</a>, <a href="https://scholar.google.es/citations?user=d3YtqLMAAAAJ&hl=en">Arash Asadi</a>, <a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>
+   
+	<div class="bibdetails">
+		Proceedings of the ACM on Measurement and Analysis of Computing Systems (POMACS)
+		<a href="http://www.sigmetrics.org/sigmetrics2021/" style="color: #0000FF" target="_blank">(ACM SIGMETRICS 2021)</a>
+    </p>
+</li>
+
+
+<b>2020</b>
 
 <li>
     <p>
@@ -106,7 +126,7 @@
    
 	<div class="bibdetails">
 		Proceedings of the 2020 IEEE Global Communications Conference
-		<a href="http://www.cs.ucc.ie/wowmom2020/" style="color: #0000FF" target="_blank">(IEEE GLOBECOM 2020)</a>
+		<a href="https://globecom2020.ieee-globecom.org/" style="color: #0000FF" target="_blank">(IEEE GLOBECOM 2020)</a>
     </p>
 </li>
 
