--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
   <li><i>Peruvian University of Applied Sciences</i>, Department of Electrical Engineering</li>	
   <li><i>Tohoku University</i> (東北大学), Department of Communications Engineering</li>
   <li><i>Eindhoven University of Technology</i>, Department of Electrical Engineering</li>
+  <li><i>Friedrich-Alexander-Universität Erlangen-Nürnberg</i>, Department of Electrical-Electronic-Communication Engineering</li>
   <li><i>Technical University of Darmstadt</i>, Department of Computer Science</li>
 </ul>
 
@@ -81,7 +82,8 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 <hr />
 <ul>
   <li>millimeter-wave communications, hybrid precoding, signal processing,</li>
-  <li>optimization, non-orthogonal multiple access (NOMA), industrial IoT,</li>
+  <li>optimization theory, non-orthogonal multiple access (NOMA), rate-splitting multiple access (RSMA),</li>
+  <li>radio resource management, wireless sensing and communications, industrial IoT,</li>
   <li>cellular vehicle-to-everything (C-V2X), wireless link scheduling, artificial intelligence</li>
 </ul>
 
