--- a/publications.html
+++ b/publications.html
@@ -62,6 +62,28 @@
 <div class="colorbib">
 <div id="year-2019" class="bibyear">
 
+<b>2022</b>
+<li>
+    <p>
+	<div class="bibentry-article">
+	<div class="bibtitle">
+    <strong>Next2You: Robust Copresence Detection Based on Channel State Information.</strong>
+		<a href="https://dl.acm.org/doi/10.1145/3491244" style="color: #FF8C00" target="_blank">[Paper]</a>
+     
+	<div class="bibauthors">
+		<a href="https://scholar.google.com/citations?user=rZCr-s4AAAAJ&hl=en"> Mikhail Fomichev</a>, 
+		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, 
+		Max Stiegler</a>, 
+		<a href="https://scholar.google.de/citations?user=VIHj44oAAAAJ&hl=en"> Alejandro Molina</a>, 
+		<a href="https://www.seemoo.tu-darmstadt.de/team/jlink/"> Jakob Link</a>, 
+		<a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>
+   
+	<div class="bibdetails">
+		IET Communications, 2019
+    </p>
+</li>
+
+
 
 <b>2019</b>
 <li>
@@ -122,7 +144,11 @@
 		<a href="slides/WOWMOM_2020_Slides.pdf" style="color: #cc0000" target="_blank">[Slides]</a>
      
 	<div class="bibauthors">
-		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, <a href="https://scholar.google.nl/citations?user=diC_npEAAAAJ&amp;hl=en">Gek Hong Sim</a>, <a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>, <a href="https://scholar.google.co.kr/citations?user=SwxG058AAAAJ&hl=en">Amnart Boonkajay</a>, <a href="https://scholar.google.co.kr/citations?user=f7PIxx0AAAAJ&hl=en">Fumiyuki Adachi</a>
+		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, 
+		<a href="https://scholar.google.nl/citations?user=diC_npEAAAAJ&amp;hl=en">Gek Hong Sim</a>, 
+		<a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>, 
+		<a href="https://scholar.google.co.kr/citations?user=SwxG058AAAAJ&hl=en">Amnart Boonkajay</a>, 
+		<a href="https://scholar.google.co.kr/citations?user=f7PIxx0AAAAJ&hl=en">Fumiyuki Adachi</a>
    
 	<div class="bibdetails">
 		Proceedings of the 2020 IEEE Global Communications Conference
