--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,30 @@
 <div id="year-2019" class="bibyear">
 
 <b>2022</b>
+
+
+<li>
+    <p>
+	<div class="bibentry-article">
+	<div class="bibtitle">
+    <strong>RadiOrchestra: Proactive Management of Millimeter-Wave Self-Backhauled Small Cells via Joint Optimization of Beamforming, User Association, Rate Selection, and Admission Control.</strong>
+		<a href="https://dl.acm.org/doi/10.1145/3491244" style="color: #FF8C00" target="_blank">[Paper]</a>
+     
+	<div class="bibauthors">
+		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, 
+		<a href="https://scholar.google.es/citations?user=d3YtqLMAAAAJ&hl=en">Arash Asadi</a>, 
+		<a href="https://scholar.google.com/citations?user=zH4j6GcAAAAJ&hl=en"> Andres Garcia-Saavedra</a>, 
+		<a href="https://scholar.google.nl/citations?user=diC_npEAAAAJ&amp;hl=en">Gek Hong Sim</a>, 
+		<a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>
+   
+	<div class="bibdetails">
+		ACM Transactions on Internet of Things
+    </p>
+</li>
+
+
+
+
 <li>
     <p>
 	<div class="bibentry-article">
@@ -79,7 +103,7 @@
 		<a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>
    
 	<div class="bibdetails">
-		IET Communications, 2019
+		ACM Transactions on Internet of Things
     </p>
 </li>
 
@@ -97,7 +121,7 @@
 		<a href="https://research.tue.nl/en/persons/haotian-zheng">Haotian Zheng</a>, <a href="https://scholar.google.nl/citations?user=YIR_JsUAAAAJ&amp;hl=en">Bin Chen</a>, <a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, <a href="https://scholar.google.nl/citations?user=zAY6ewsAAAAJ&amp;hl=en">Zizheng Cao</a>, <a href="https://scholar.google.nl/citations?user=nA6SvIEAAAAJ&amp;hl=en">Ton Koonen</a> 
    
 	<div class="bibdetails">
-		IET Communications, 2019
+		IET Communications
     </p>
 </li>
 </ol>
@@ -124,7 +148,11 @@
 		<a href="slides/WOWMOM_2020_Slides.pdf" style="color: #cc0000" target="_blank">[Slides]</a>
      
 	<div class="bibauthors">
-		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, <a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Andreas Baeuml</a>, <a href="https://scholar.google.nl/citations?user=diC_npEAAAAJ&amp;hl=en">Gek Hong Sim</a>, <a href="https://scholar.google.es/citations?user=d3YtqLMAAAAJ&hl=en">Arash Asadi</a>, <a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>
+		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, 
+		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Andreas Baeuml</a>, 
+		<a href="https://scholar.google.nl/citations?user=diC_npEAAAAJ&amp;hl=en">Gek Hong Sim</a>, 
+		<a href="https://scholar.google.es/citations?user=d3YtqLMAAAAJ&hl=en">Arash Asadi</a>, 
+		<a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>
    
 	<div class="bibdetails">
 		Proceedings of the ACM on Measurement and Analysis of Computing Systems (POMACS)
