--- a/publications.html
+++ b/publications.html
@@ -58,19 +58,19 @@
 <hr />
 
 
+
 <ol>
 <div class="colorbib">
-<div id="year-2019" class="bibyear">
+
 
 <b>2022</b>
-
 
 <li>
     <p>
 	<div class="bibentry-article">
 	<div class="bibtitle">
     <strong>RadiOrchestra: Proactive Management of Millimeter-Wave Self-Backhauled Small Cells via Joint Optimization of Beamforming, User Association, Rate Selection, and Admission Control.</strong>
-		<a href="https://dl.acm.org/doi/10.1145/3491244" style="color: #FF8C00" target="_blank">[Paper]</a>
+		<a href="https://ieeexplore.ieee.org/document/9839601" style="color: #FF8C00" target="_blank">[Paper]</a>
      
 	<div class="bibauthors">
 		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, 
@@ -80,7 +80,7 @@
 		<a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>
    
 	<div class="bibdetails">
-		ACM Transactions on Internet of Things
+		IEEE Transactions on Wireless Communications
     </p>
 </li>
 
