--- a/publications.html
+++ b/publications.html
@@ -54,17 +54,19 @@
 <section>
 
 
+<!-- -------------------------------- Journals -------------------------------- -->
 <h2 id="journal-publications">Journal Publications</h2>
 <hr />
-
-
 
 <ol>
 <div class="colorbib">
 
 
+
 <b>2022</b>
 
+
+<!-- RadiOrchesta -->
 <li>
     <p>
 	<div class="bibentry-article">
@@ -85,8 +87,7 @@
 </li>
 
 
-
-
+<!-- Next2You -->
 <li>
     <p>
 	<div class="bibentry-article">
@@ -108,8 +109,10 @@
 </li>
 
 
-
 <b>2019</b>
+
+
+<!-- Polar -->
 <li>
     <p>
 	<div class="bibentry-article">
@@ -127,13 +130,43 @@
 </ol>
 
 
+
+<!-- -------------------------------- Conferences -------------------------------- -->
+
+
 <h2 id="conference-publications">Conference Publications</h2>
 <hr />
 
 
 <ol>
 <div class="colorbib">
-<div id="year-2019" class="bibyear">
+
+
+
+<b>2022</b>
+
+<li>
+    <p>
+	<div class="bibentry-article">
+	<div class="bibtitle">
+    <strong>Sequential Parametric Optimization for Rate-Splitting Precoding in Non-Orthogonal Unicast and Multicast Transmissions</strong>
+		<a href="https://ieeexplore.ieee.org/document/9838374" style="color: #FF8C00" target="_blank">[Paper]</a>
+		<a href="slides/ICC_2022_Slides_Slides.pdf" style="color: #cc0000" target="_blank">[Slides]</a>
+     
+	<div class="bibauthors">
+		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, 
+		<a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>, 
+		<a href="https://scholar.google.com/citations?hl=en&user=knPmgzsAAAAJ&view_op=list_works&sortby=pubdate">Bruno Clerckx</a>
+		<a href="https://scholar.google.nl/citations?user=diC_npEAAAAJ&amp;hl=en">Gek Hong Sim</a>
+   
+	<div class="bibdetails">
+		Proceedings of the IEEE International Conference on Communications
+		<a href="https://icc2022.ieee-icc.org/" style="color: #0000FF" target="_blank">(IEEE ICC 2022)</a>
+    </p>
+</li>
+
+
+
 
 
 
@@ -155,7 +188,7 @@
 		<a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>
    
 	<div class="bibdetails">
-		Proceedings of the ACM on Measurement and Analysis of Computing Systems (POMACS)
+		Proceedings of the ACM on Measurement and Analysis of Computing Systems
 		<a href="http://www.sigmetrics.org/sigmetrics2021/" style="color: #0000FF" target="_blank">(ACM SIGMETRICS 2021)</a>
     </p>
 </li>
