--- a/academic-service.html
+++ b/academic-service.html
@@ -74,11 +74,14 @@
   <li>IEEE Transactions on Control of Network Systems (IEEE TCNS)</li>
   <li>IEEE Signal Processing Letters (IEEE SPL)</li>
   <li>IEEE Communications Letters (IEEE COMML)</li>
-  <li>IEEE Access</li>
+  <li>IEEE Networking Letters</li>
+  <li>IEEE Control Systems Letters</li>
   <li>Elsevier Vehicular Communications</li>
   <li>Elsevier Computer Communications</li>
   <li>Elsevier Speech Communication</li>
 </ul>
+
+
 
 
 <h4 id="reviewer">Conferences</h3>
