--- a/publications.html
+++ b/publications.html
@@ -159,7 +159,7 @@
 	<div class="bibauthors">
 		<a href="https://scholar.google.nl/citations?hl=en&user=P51I-OsAAAAJ&view_op=list_works&sortby=pubdate">Luis F. Abanto-Leon</a>, 
 		<a href="https://scholar.google.com/citations?hl=en&user=yS4WHUQAAAAJ&view_op=list_works&sortby=pubdate">Matthias Hollick</a>, 
-		<a href="https://scholar.google.com/citations?hl=en&user=knPmgzsAAAAJ&view_op=list_works&sortby=pubdate">Bruno Clerckx</a>
+		<a href="https://scholar.google.com/citations?hl=en&user=knPmgzsAAAAJ&view_op=list_works&sortby=pubdate">Bruno Clerckx</a>,
 		<a href="https://scholar.google.com/citations?hl=en&user=diC_npEAAAAJ&view_op=list_works&sortby=pubdate">Gek Hong Sim</a>
    
 	<div class="bibdetails">
