--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-	<link rel="stylesheet" href="C:/Users/Luis/Documents/GitHub/l-f-abanto-leon.github.io/css/academicons.min.css"/>
+	<link rel="stylesheet" href="css/academicons.min.css"/>
 	<meta https-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.6">
     <link rel="stylesheet" href="all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
