--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-	<link rel="stylesheet" href="css/academicons.min.css"/>
+	<link rel="stylesheet" href="css/academicons.min.css" />
 	<meta https-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.6">
     <link rel="stylesheet" href="all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -85,10 +85,10 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 <h2 id="research-interests">Research Interests</h2>
 <hr />
 <ul>
-  <li>millimeter-wave, hybrid precoding, integrated access-backhaul (IAB),</li>
-  <li>non-orthogonal multiple access (NOMA), rate-splitting multiple access (RSMA),</li>
-  <li>layered-division multiple access (LDMA), cellular vehicle-to-everything (C-V2X),</li>
-  <li>radio resource management (RRM), integrated sensing and communications (ISAC), industrial IoT,</li>
+  <li>millimeter-wave, hybrid precoding, </li>
+  <li>non-orthogonal multiple access (NOMA), layered-division multiple access (LDMA), rate-splitting multiple access (RSMA),</li>
+  <li>cellular vehicle-to-everything (C-V2X), industrial IoT</li>
+  <li>radio resource management (RRM), integrated access-backhaul (IAB), integrated sensing and communications (ISAC), ,</li>
   <li>optimization theory, graph theory, machine learning</li>
 </ul>
 
