--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ I am PhD student at Technische Universität Darmstadt. My research focuses on mi
 <h2 id="research-interests">Research Interests</h2>
 <hr />
 <ul>
-  <li>millimeter-wave, hybrid precoding, </li>
-  <li>non-orthogonal multiple access (NOMA), layered-division multiple access (LDMA), rate-splitting multiple access (RSMA),</li>
-  <li>cellular vehicle-to-everything (C-V2X), industrial IoT</li>
-  <li>radio resource management (RRM), integrated access-backhaul (IAB), integrated sensing and communications (ISAC), ,</li>
+  <li>millimeter-wave, hybrid precoding </li>
+  <li>non-orthogonal multiple access (NOMA), layered-division multiple access (LDMA), rate-splitting multiple access (RSMA) </li>
+  <li>cellular vehicle-to-everything (C-V2X), industrial IoT </li>
+  <li>radio resource management (RRM), integrated access-backhaul (IAB), integrated sensing and communications (ISAC) </li>
   <li>optimization theory, graph theory, machine learning</li>
 </ul>
 
